deployment-with-pvc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: clippy-deployment
spec:
  template:
    metadata:
      labels:
        app: party-clippy
    spec:
      containers:
      - image: r.j3ss.co/party-clippy
        name: party-clippy
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        tty: true
        command: ["party-clippy"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp/hello-clippy
          name: itdoesntmatter
      volumes:
      - name: itdoesntmatter
        persistentVolumeClaim:
          claimName: pvc-clippy
