pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-web
  labels:
    app: party-clippy
spec:
  containers:
  - name: web
    image: r.j3ss.co/party-clippy
    ports:
      - name: web
        containerPort: 80
        protocol: TCP
    resources:
      requests:
        memory: "0.10Gi"
        cpu: "0.05"
      limits:
        memory: "0.20Gi"
        cpu: "0.10"
