service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clippy-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: party-clippy
  type: ClusterIP
