ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clippy-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: <your-favorite-supervillian>.74fc6563672347fabd98.australiaeast.aksapp.io
    http:
      paths:
      - backend:
          serviceName: clippy-service
          servicePort: 80
        path: /
